[package]
name = "tree-sitter-perl-html-template"
description = "Perl HTML::Template grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "html-template"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mrsdizzie/tree-sitter-perl-html-template"
edition = "2023"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
